Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.3
-
None
-
-
9fee35a2ed (qt/qtbase/dev) 9fee35a2ed (qt/tqtc-qtbase/dev) 9f4ffb4bd2 (qt/qtbase/6.3) 9f4ffb4bd2 (qt/tqtc-qtbase/6.3) d4800e542d (qt/qtbase/6.2) d4800e542d (qt/tqtc-qtbase/6.2) 27e0ca05a0 (qt/tqtc-qtbase/5.15)
Description
The above method should just return "invalid" QDateTime when it cannot be "parsed" from provided string/pattern.
Sample inputs:
string - "Sun, 29 Mar 2020 02:26:3"
format - "ddd, d MMM yyyy HH:mm:ss"
Given string clearly does not fall withing provided format (because of "ss"), but QLocale::toDateTime(...) asserts in debug mode.
Attachments
Issue Links
- relates to
-
QTBUG-99747 QDate::startOfDay( ) leads to assert in debug build
-
- Open
-
For Gerrit Dashboard: QTBUG-102199 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
403936,8 | Fix assertion failure when parsing a doubly-invalid date-time text | dev | qt/qtbase | Status: MERGED | +2 | 0 |
405257,2 | Fix assertion failure when parsing a doubly-invalid date-time text | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
405258,2 | Fix assertion failure when parsing a doubly-invalid date-time text | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
405261,4 | Fix assertion failure when parsing a doubly-invalid date-time text | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | -1 | 0 |