Fix assertion failure when parsing a doubly-invalid date-time text

When the date-time string falls in a spring-forward (so is invalid)
and one of the fields of the parsed string doesn't match the format
it's meant to (e.g. a single-digit seconds field when format ss was
specified), a check that the current fall-back date-time is between
the minimum and maximum for the parser object failed, triggering an
assertion.

In any case, an invalid default-value wasn't useful to the code that
parsed a single section of the date-time string, so brute-force the
current value to a valid date-time (when possible) using the usual
round-trip via milliseconds since the epoch.

Added the test-case which first revealed the problem, plus a couple
more informed by it, to exercise the same code-paths with fewer things
failing. (For 5.15: converted u"..."_qs to QStringLiteral("...").)

Fixes: QTBUG-102199
Change-Id: I658308614505ef25f4c97d0de6148acb54a65a0f
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 9fee35a2eda68b5968d911d5e14d298b91418d2c)
Reviewed-by: Ievgenii Meshcheriakov <ievgenii.meshcheriakov@qt.io>